--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-VITE_BACKEND_URL='https://chat-app-backend-iahgh7azr-bhumees-projects-b0089f91.vercel.app'
+VITE_BACKEND_URL='http://localhost:5000'
